--- a/views/movie/listMovies.handlebars
+++ b/views/movie/listMovies.handlebars
@@ -74,12 +74,12 @@
 				<div class="card-header" id="headingOne">
 					<button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne{{id}}"
 						aria-expanded="false" aria-controls="collapseOne{{id}}" style="text-decoration: none;">
-						Story <i class="fas fa-chevron-down"></i>
+						Showtimes <i class="fas fa-chevron-down"></i>
 					</button>
 				</div>
 				<div id="collapseOne{{id}}" class="collapse" aria-labelledby="headingOne" data-parent="#storyAccordion">
 					<div class="card-body">
-						
+						<button type="button" class="btn btn-primary">Primary</button>
 					</div>
 				</div>
 			</div>
@@ -150,12 +150,12 @@
 				<div class="card-header" id="headingOne">
 					<button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne{{id}}"
 						aria-expanded="false" aria-controls="collapseOne{{id}}" style="text-decoration: none;">
-						Story <i class="fas fa-chevron-down"></i>
+						Showtimes <i class="fas fa-chevron-down"></i>
 					</button>
 				</div>
 				<div id="collapseOne{{id}}" class="collapse" aria-labelledby="headingOne" data-parent="#storyAccordion">
 					<div class="card-body">
-						
+						<button type="button" class="btn btn-primary">Primary</button>
 					</div>
 				</div>
 			</div>
