--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,5 +1,35 @@
-<div class="jumbotron text-center">
-	<div class="container">
-	</div>
-	<br>
+<div class="container">
+  <div class="d-flex justify-content-center"><img class="d-block w-10" src="img/logo.png" width="50%" height="50%"></div>
 </div>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;</p>
+<div class="fs-5 text-uppercase text-primary">Latest Movies</div>
+<div>
+  <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner">
+    {{#each movies}}
+    <div class="carousel-item active">
+        <div class="row">
+          <div class="col-md-4">
+            <div class="card mb-2">
+              <img class="card-img-top" src="{{posterURL}}"
+                   alt="Card image cap">
+              <div class="card-body">
+                <h4 class="card-title">{{title}}</h4>
+                <p class="card-text">{{story}}</p>
+                <a class="btn btn-primary">Book now</a>
+              </div>
+            </div>
+          </div>
+    {{/each}}
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+</div>
+</div>  
